--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="left_slide">
             <div class="profileText">
                 <div class="imgBx">
-                    <img src="498.jpg" alt="">
+                    <img src="498.jpg" alt="Image non disponible">
                 </div>
                 <h2>Yvan Igor AHISHAKIYE <br><span>Web Developer</span></h2>
             </div>
