--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         <span class="text">www.yvanigor.epizy.com</span>
                     </li>
                     <li>
-                        <span class="icon"><i class="fa fa-twitter" aria-hidden="true"></i></span>
-                        <span class="text">@YvanAhishakiye</span>
+                        <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
+                        <span class="text">Yvan Igor Ahishakiye</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
@@ -49,17 +49,17 @@
                     <li>
                       <h5>2019 - 2022</h5>
                       <h4>Bachelor Degree in Science and Technology</h4>
-                      <h4>BIU</h4>
+                      <h3>BIU</h3>
                     </li>
                     <li>
                         <h5>2016 - 2019</h5>
                         <h4>Certificate of Completion of General Post-Basic Studies</h4>
-                        <h4>OLWHS</h4>
+                        <h3>LNDS</h3>
                       </li>
                       <li>
                         <h5>2011 - 2016</h5>
                         <h4>Common Core Certificate</h4>
-                        <h4>Cankuzo High School</h4>
+                        <h3>Cankuzo High School</h3>
                       </li>
                 </ul>
             </div>
@@ -90,18 +90,28 @@
         <div class="right_slide">
                 <div class="about">
                     <h2 class="title2">Profile</h2>
-                    <p>Passionate developer in the field of the web 2 years ago currently web developer, I design and create websites from the specifications to the online publication, I also develop using frameworks like boostrapp, Laravel and VueJs which allows me to carry out a task in a short time. <br> <br> From the beginning of my journey as an independent developer almost 2 years ago, I have collaborated with talented people to create web products for consumers.</p>
+                    <p>Passionate developer in the field of the web 2 years ago currently web developer, I design and create websites from the specifications to the online publication, I also develop using Laravel, VueJs, and Wordpress which allows me to carry out a task in a short time. <br> <br> From the beginning of my journey as a web developer almost 2 years ago, I have collaborated with talented people to create web products for consumers.</p>
                 </div>
                 <div class="about">
                     <h2 class="title2">Experience</h2>
                     <div class="box">
                         <div class="year_company">
-                            <h5>2022-present</h5>
+                            <h5>Feb-July/2023</h5>
+                            <h5>aclis</h5>
+                        </div>
+                        <div class="text">
+                            <h4>Full-stack web developer</h4>
+                            <p>I had the opportunity to work with a talented team of developers, gain practical experience in various web technologie</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="year_company">
+                            <h5>2022-2023</h5>
                             <h5>Gdsc biu</h5>
                         </div>
                         <div class="text">
                             <h4>Web lead</h4>
-                            <p>I am in charge of the web developers department in the gdsc biu club.</p>
+                            <p>I was in charge of the web developers department in the gdsc biu club.</p>
                         </div>
                     </div>
                     <div class="box">
@@ -118,18 +128,7 @@
                     <div class="box">
                         <div class="year_company">
                             <h5>2018</h5>
-                            <h5>Youth Globe</h5>
-                        </div>
-                        <div class="text">
-                            <h4>Coordinator</h4>
-                            <p>I assisted the Coordinator of the Organizing Committee of the Forum
-                                2018 Youth National.</p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <div class="year_company">
-                            <h5>2018</h5>
-                            <h5>Company Name</h5>
+                            <h5>youth globe</h5>
                         </div>
                         <div class="text">
                             <h4>Young Leader</h4>
@@ -141,31 +140,19 @@
                 <div class="about skills">
                     <h2 class="title2">Professional Skills</h2>
                     <div class="box">
-                        <h4>Html</h4>
+                        <h4>Html/css</h4>
                         <div class="percent">
                             <div style="width:85%;"></div>
                         </div>
                     </div>
                     <div class="box">
-                        <h4>css</h4>
-                        <div class="percent">
-                            <div style="width:65%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
                         <h4>javascript</h4>
                         <div class="percent">
-                            <div style="width:45%;"></div>
+                            <div style="width:70%;"></div>
                         </div>
                     </div>
                     <div class="box">
                         <h4>Php</h4>
-                        <div class="percent">
-                            <div style="width:60%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>c#</h4>
                         <div class="percent">
                             <div style="width:60%;"></div>
                         </div>
@@ -177,7 +164,7 @@
                         </div>
                     </div>
                     <div class="box">
-                        <h4>adobe xd</h4>
+                        <h4>figma</h4>
                         <div class="percent">
                             <div style="width:50%;"></div>
                         </div>
